<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical" >

	<org.ros.android.view.RosTextView
		android:id="@+id/text"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textSize="30dip" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical" >

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="20sp" >

			<Button
				android:id="@+id/button1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="30"
				android:text="@string/left_forward" />

			<Button
				android:id="@+id/button2"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent"
				android:layout_weight="30"
				android:text="@string/forward" />

			<Button
				android:id="@+id/button3"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="30"
				android:text="@string/right_foward" />
		</LinearLayout>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical" >

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="20sp" >

			<Button
				android:id="@+id/button4"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="30"
				android:text="@string/rotate_anticlockwise" />

			<Button
				android:id="@+id/button5"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="30"
				android:text="@string/stop" />

			<Button
				android:id="@+id/button6"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="30"
				android:text="@string/rotate_clockwise" />
		</LinearLayout>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical" >

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="20sp" >

			<Button
				android:id="@+id/button7"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="30"
				android:text="@string/left_backward" />

			<Button
				android:id="@+id/button8"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="30"
				android:text="@string/backward" />

			<Button
				android:id="@+id/button9"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="30"
				android:text="@string/right_backward" />
		</LinearLayout>
	</LinearLayout>

</LinearLayout>
